Use fixed height for album link boxes. Not ideal solution but it will fix the alignment of the elements when some of them have locks.

--- a/layout/style.css
+++ b/layout/style.css
@@ -53,6 +53,7 @@ hr {
 #directories div {
 	float: left;
 	width: 250px;
+	height: 20px;
 	margin: 10px;
 	margin-top: 4px;
 	margin-bottom: 4px;
